# LiteScriptLS

./: CMakeLists.txt  README.md  litescript.ls
src/: AST.h  ASTNode.h  Compiler.cpp  Compiler.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  LiteScript.cpp  LiteScript.h  Parser.cpp  Parser.h  main.cpp
